WIP syntax-scheme, new theme neon

--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,8 @@ url: ""
 markdown: kramdown
 #kramdown:
 #  syntax_highlighter: rouge
-#  syntax_highlighter_opts: # Rouge Options › https://github.com/jneen/rouge#full-options
+#  # Rouge Options › https://github.com/jneen/rouge#full-options
+#  syntax_highlighter_opts:
 #    css_class: highlight
 #    span:
 #      line_numbers: false
