--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -6,8 +6,8 @@ version: v1.3
 title: Yolo on my friend
 description: Loveable single pages
 theme:
-  name: solo
-  syntax: sprinkles
+  name: neon
+  syntax: neon
 align: left
 #header:
 #  logo: assets/images/logo.png
