Adding dusk theme, remove unused tertiary-container color var

--- a/src/samples/yolo-dallas/_data/settings.yml
+++ b/src/samples/yolo-dallas/_data/settings.yml
@@ -6,7 +6,8 @@ version: v1.3
 title: Dallas is a jewel
 description: Dallas is a beautiful sight...
 theme:
-  name: corbs
+  name: neon
+  syntax: neon
 align: left
 header:
   logo: assets/images/logo.png
