--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -6,8 +6,8 @@ version: v1.3
 title: Yolo on my friend
 description: Loveable single pages
 brand:
-  theme: neo
-  syntax: neo
+  theme: zoot
+  syntax: domino
 align: left
 # header:
 #  logo: assets/images/logo.png
