Total sass theme work-in-progress

--- a/_config.yml
+++ b/_config.yml
@@ -37,4 +37,5 @@ exclude:
 # -----------------------------------------------------------------------------
 sass:
   sass_dir: _sass
-  style: compressed
+  style: expanded
+  sourcemap: never
