--- a/_data/fonts.yml
+++ b/_data/fonts.yml
@@ -1,3 +1,22 @@
+# Serif fonts
+- name: "Hepta Slab"
+  weights: "200,300,400,700"
+- name: "Roboto Serif"
+  weights: "0,200;0,400;0,700;1,200;1,300;1,400;1,700"
+- name: "Bitter"
+  weights: "0,200;0,300;0,400;0,700;1,200;1,300;1,400;1,700"
+- name: "Hahmlet"
+  weights: "300;400;500;700"
+- name: "Lora"
+  weights: "0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700"
+- name: "IBM Plex Serif"
+  weights: "0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700"
+- name: "Martel"
+  weights: "300;400;600;700"
+- name: "Source Serif Pro"
+  weights: "0,300;0,400;0,600;0,700;1,300;1,400;1,600;1,700"
+- name: "Zilla Slab"
+  weights: "0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700"
 # Sans-serif fonts
 - name: "Open Sans"
   weights: "400,400i,700,700i"
@@ -13,13 +32,26 @@
   weights: "0,300;0,400;0,700;1,300;1,400;1,700"
 - name: "Rubik"
   weights: "0,300;0,400;0,700;1,300;1,400;1,700"
-# Serif fonts
-- name: "Hepta Slab"
-  weights: "200,300,400,700"
-- name: "Roboto Serif"
-  weights: "0,200;0,400;0,700;1,200;1,300;1,400;1,700"
-- name: "Bitter"
-  weights: "0,200;0,300;0,400;0,700;1,200;1,300;1,400;1,700"
+- name: "Sono"
+  weights: "300;400;500;700"
+- name: "Work Sans"
+  weights: "0,300;0,400;0,600;0,700;1,300;1,400;1,600;1,700"
+- name: "Red Hat Display"
+  weights: "0,300;0,400;0,600;0,700;1,300;1,400;1,600;1,700"
+- name: "Quicksand"
+  weights: "300;400;500;600;700"
+- name: "Inter"
+  weights: "300;400;600;700"
+- name: "Libre Franklin"
+  weights: "0,300;0,400;0,600;0,700;1,300;1,400;1,600;1,700"
+- name: "Manrope"
+  weights: "300;400;500;600;700"
+- name: "Mulish"
+  weights: "0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700"
+- name: "Urbanist"
+  weights: "0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700"
+- name: "Source Sans Pro"
+  weights: "0,300;0,400;0,600;0,700;1,300;1,400;1,600;1,700"
 # Monospace fonts
 - name: "Inconsolata"
   weights: "400,400i,700,700i"
