--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -2,12 +2,12 @@
 # Yolo site settings. see: _config.yml for jekyll settings
 # -----------------------------------------------------------------------------
 name: Yolo
-version: v1.3
+version: v1.4
 title: Yolo on my friend
 description: Loveable single pages
 brand:
-  theme: newwave
-  syntax: newwave
+  theme: corbs
+  syntax: corbs
 align: left
 # header:
 #  logo: assets/images/logo.png
