--- a/_data/fonts.yml
+++ b/_data/fonts.yml
@@ -15,6 +15,8 @@
   weights: "300;400;600;700"
 - name: "Source Serif Pro"
   weights: "0,300;0,400;0,600;0,700;1,300;1,400;1,600;1,700"
+- name: "Noto Serif"
+  weights: "0,400;0,700;1,400;1,700"
 # Sans-serif fonts
 - name: "Open Sans"
   weights: "400,400i,700,700i"
@@ -50,6 +52,10 @@
   weights: "0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700"
 - name: "Source Sans Pro"
   weights: "0,300;0,400;0,600;0,700;1,300;1,400;1,600;1,700"
+- name: "Noto Sans"
+  weights: "0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700"
+- name: "Noto Sans Display"
+  weights: "0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700"
 # Monospace fonts
 - name: "Inconsolata"
   weights: "400,400i,700,700i"
@@ -67,3 +73,8 @@
   weights: "0,200;0,300;0,400;0,700;1,200;1,300;1,400;1,700"
 - name: "JetBrains Mono"
   weights: "0,100;0,200;0,300;0,400;0,700;1,100;1,200;1,300;1,400;1,700"
+- name: "Noto Sans Mono"
+  weights: "300;400;500;700"
+# Noto Emojis fonts
+- name: "Noto Emoji"
+  weights: "300;400;500;700"
